--- a/templates/batches/batch-timing.html
+++ b/templates/batches/batch-timing.html
@@ -79,7 +79,7 @@
           <label for="validationCustom01"><strong>Select Days <span class="red">*</span></strong></label>
 
           <div>
-            <select class="form-control " data-actions-box="true" id="days" name='fordays' required>
+            <select class="form-control  selectpicker multiselect multiple-checkboxes" data-actions-box="true"  multiple="multiple" id="days" name='fordays' required>
               <option value="disabled">Day</option>
               <option value="Sunday">Sunday</option>
               <option value="Monday">Monday</option>
