--- a/templates/accounts/change-password.html
+++ b/templates/accounts/change-password.html
@@ -1,14 +1,71 @@
-<!-- commons/change-password.html -->
+{% extends 'dashboard/base.html' %}
+{% load static %}
+{% block css %}
+{% endblock %}
+{% block main-content %}
+<style>
+    #card {
+        background-color: white;
+        padding-bottom: 3rem;
+        padding-top: 3rem;
+        color: black;
+    }
+</style>
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+<div class="mt-5">
+    {% if messages %}
+    {% for k in messages%}
+    <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
+        <b>{{ k }} !</b>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+    {% endif %}
+    <div class="card" style="color: black;">
+        <div class="card-header">
+            <h3 style="align-items: center;text-align: center;">Password Change</h3>
+        </div>
+        <form class="mb-4 mt-4" method="post">{% csrf_token %}
+            <div class="mx-2 row" id="INSTBATCH">
+                {{ form.as_p }}
 
 
-{% block title %}Change Password Page{% endblock title %}
+            </div>
 
-{% block content %} 
-    <h2>Change Password</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        
-        <button type="submit">Submit</button>
-    </form>
-{% endblock content %}
+
+
+
+            <!-- {% block title %}Change Password Page{% endblock title %}
+
+            {% block content %}
+            <h2>Change Password</h2>
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+            
+                <button type="submit">Submit</button>
+            </form>
+            {% endblock content %} -->
+            
+
+
+
+            <br>
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary"> Add </button>
+            </div>
+        </form>
+    </div>
+    <br>
+
+
+    
+
+   
+
+
+</div>
+{% endblock %}
