--- a/templates/courses-2/courses.html
+++ b/templates/courses-2/courses.html
@@ -107,7 +107,7 @@
                   style="font-size:medium;"></i></a>
               <a class="btn btn-danger" href="{% url 'deleteCourse' i.id %}"><i class="flaticon-delete-fill"
                   style="font-size:medium;"></i></a>
-              <a class="popup-with-form" href="{% url 'courseArchivefirst' i.id %}"><i class="flaticon-file-upload-line  bg-primary p-1 text-white br-6 mb-3"
+              <a class="btn btn-dark" href="{% url 'courseArchivefirst' i.id %}"><i class="flaticon-delete-fill"
                   style="font-size:medium;"></i></a>
             </td>
             <td class="text-center">
