--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -1,3 +1,13 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@Rakesh10021997 
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -187,6 +197,8 @@
                         <li><a href="{% url 'teaching-type-2' %}">Add Teaching Type</a>
                         </li>
                         <li><a href="{% url 'viewteachType' %}">View Teaching Type</a>
+                        </li>
+                        <li><a href="{% url 'teach-archive' %}">Archived Teaching Type</a>
                         </li>
                       </ul>
                     </li>
@@ -485,3 +497,5 @@
   {% endblock extra-script %}
 </body>
 </html>
+
+
