--- a/templates/courses-2/archive-teaching.html
+++ b/templates/courses-2/archive-teaching.html
@@ -84,7 +84,7 @@
 
                             <td class="text-center">
 
-                                <a class="btn btn-dark" href="{% url 'teachingArchive' i.id %}"><i
+                                <a class="btn btn-dark" href="{% url 'teach-unarchive' i.id %}"><i
                                         class="flaticon-delete-fill" style="font-size:medium;"></i></a>
 
                             </td>
