--- a/templates/Institute/institute.html
+++ b/templates/Institute/institute.html
@@ -129,12 +129,12 @@
     <div class="card-header">
         <div class="row">
             <div class="col-sm">
-                <h2>Endrolled Institute</h2>
+                <h2 style="color: black;">Endrolled Institute</h2>
             </div>
         </div>
     </div>
-    <div class="card-body container">
-        <h4>Institute Not Found</h4>
+    <div class="card-body">
+        <h3>Institute Not Found</h3>
     </div>
 </div>
 {% endif %}
