--- a/templates/students/searchUserStudent.html
+++ b/templates/students/searchUserStudent.html
@@ -87,6 +87,8 @@
                                 </div>
                                     <!--Table-->
                                     <hr>
+                                    {% else %}
+                                    <h3>Student Not Found</h3>
                             {% endif %}
                         </div>
                     </div>
