--- a/templates/teacher/searchUserTutor.html
+++ b/templates/teacher/searchUserTutor.html
@@ -89,6 +89,8 @@
                                 </div>
                                     <!--Table-->
                                     <hr>
+                            {% else %}
+                                <h3>Tutor Not Found</h3>
                             {% endif %}
                         </div>
                 </div>
