--- a/templates/Exam/Questions.html
+++ b/templates/Exam/Questions.html
@@ -266,7 +266,7 @@
             <div class="row">
               <div class="col">
                 <div class="text-center">
-                  <button type="submit" class="mb-3 w-100 btn btn-outline-dark">Add Qustion</button>
+                  <button type="submit" class="mb-3 w-100 btn btn-outline-dark">Add Question</button>
                 </div>
               </div>
             </div>
@@ -275,7 +275,11 @@
       </div>
       <div class="text-center">
         <div class="col">
+          {% if request.session.user == 'institute' %}
+          <a href="{% url 'editexamquestions' %}" class="mb-3 btn btn-info">Save</a>
+          {% else %}
           <a href="{% url 'questionalltutor' %}" class="mb-3 btn btn-info">Save</a>
+          {% endif %}
         </div>
       </div>
     </div>
