--- a/templates/Results/ResultInstitute.html
+++ b/templates/Results/ResultInstitute.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/dashboard.html' %}
+{% extends 'dashboard/base.html' %}
 {% load static %}
 {% block css %}
 <style media="screen">
@@ -211,7 +211,7 @@
     }
 </style>
 {% endblock %}
-{% block body %}
+{% block main-content %}
 <main>
     <div class="container mt-4">
         <div class="card mb-4">
