--- a/templates/Results/detailed_result.html
+++ b/templates/Results/detailed_result.html
@@ -1,9 +1,9 @@
 {% extends 'dashboard/student-dashboard.html' %}
 {% load static %}
 {% block main-content %}
-<div class="my-3 card">
+<div class="mt-5 card">
   <div class="card-header">
-   <h4 class="p-2"><b>Results</b></h4>
+   <h2 style="color: black;">Results</h2>
   </div>
   <div class="card-body">
     <div class="accordion" id="accordionExample">
@@ -84,7 +84,7 @@
                 </tr>
                 <tr>
                   <td>Total Time: {{result.exam_duration}}</td>
-                  <td>My Time: {{result.time_taken}} mins</td>
+                  <td>My Time: <div class="time">{{result.time_taken}}</div></td>
                   <td>My Rank: {{result.rank}}</td>
                   <td>
                     Result: {% if result.pass_status %}
@@ -120,16 +120,13 @@
         <div class="card-body">
           <div class="table-responsive border-bottom mb-3">
             <table class="table table-striped table-hover">
-              <thead>
                 <tr>
                   <th scope="col">Section</th>
                   <th scope="col">Total Question</th>
                   <th scope="col">Correct/Incorrect Question</th>
-                  <th scope="col">Marks Scored/Negative Marks</th>
+                  <th scope="col">Positive Marks/Negative Marks</th>
                   <th scope="col">Unattempted Question/ Marks</th>
                 </tr>
-              </thead>
-              <tbody>
                 <tr>
                   <th scope="row">A</th>
                   <td>{{section.A_section_count}}</td>
@@ -182,7 +179,6 @@
                     {{section.D_section_unanswered}}/{{section.D_section_unanswered_marks}}
                   </td>
                 </tr>
-              </tbody>
             </table>
           </div>
           <canvas id="sectionchart"></canvas>
@@ -192,18 +188,15 @@
       <div id="timemanage" class="collapse" data-parent="#accordionExample">
         <div class="card-body">
           <table class="table table-responsive table-striped">
-            <thead>
               <tr>
                 <th scope="col text-center">Section</th>
                 <th scope="col text-center">Total Question</th>
                 <th scope="col text-center">Correct/Incorrect Question</th>
-                <th scope="col text-center">Marks Scored/Negative Marks</th>
+                <th scope="col text-center">Positive Marks/Negative Marks</th>
                 <th scope="col text-center">Percentage</th>
                 <th scope="col text-center">Unattempted Question/ Marks</th>
                 <th scope="col text-center">Total Time</th>
               </tr>
-            </thead>
-            <tbody>
               <tr>
                 <th scope="row">A</th>
                 <td>{{section.A_section_count}}</td>
@@ -217,7 +210,7 @@
                 <td>
                   {{section.A_section_unanswered}}/{{section.A_section_unanswered_marks}}
                 </td>
-                <td>{{section.A_section_time}} mins</td>
+                <td><div class="time">{{section.A_section_time}} </div></td>
               </tr>
               <tr>
                 <th scope="row">B</th>
@@ -232,7 +225,7 @@
                 <td>
                   {{section.B_section_unanswered}}/{{section.B_section_unanswered_marks}}
                 </td>
-                <td>{{section.B_section_time}} mins</td>
+                <td><div class="time">{{section.B_section_time}} </div></td>
               </tr>
               <tr>
                 <th scope="row">C</th>
@@ -247,7 +240,7 @@
                 <td>
                   {{section.C_section_unanswered}}/{{section.C_section_unanswered_marks}}
                 </td>
-                <td>{{section.C_section_time}} mins</td>
+                <td><div class="time">{{section.C_section_time}}</div></td>
               </tr>
               <tr>
                 <th scope="row">D</th>
@@ -262,9 +255,8 @@
                 <td>
                   {{section.D_section_unanswered}}/{{section.D_section_unanswered_marks}}
                 </td>
-                <td>{{section.D_section_time}} mins</td>
+                <td><div class="time">{{section.D_section_time}}</div></td>
               </tr>
-            </tbody>
           </table>
           <canvas id="timegraph"></canvas>
         </div>
@@ -274,7 +266,6 @@
         <div class="card-body">
           <div class="table-responsive">
             <table class="table ">
-              <thead>
                 <tr>
                   <th scope="col">Q.No</th>
                   <th scope="col">Question</th>
@@ -285,8 +276,6 @@
                   <th scope="col">Time</th>
                   <th scope="col">Extra Time</th>
                 </tr>
-              </thead>
-              <tbody>
                 {% for q in questions %}
                 <tr>
                   <th scope="row">{{forloop.counter}}</th>
@@ -295,11 +284,10 @@
                   <td>{{q.correct_ans | safe}}</td>
                   <td>{{q.marks}}</td>
                   <td>{{q.marks_given}}</td>
-                  <td>{{q.time}} mins</td>
-                  <td>{{q.extra_time}} mins</td>
+                  <td><div class="time">{{q.time}} </div></td>
+                  <td><div class="time">{{q.extra_time}}</div></td>
                 </tr>
                 {% endfor %}
-              </tbody>
             </table>
           </div>
         </div>
@@ -362,7 +350,7 @@
                 Marks Scored: {{q.marks_given}}
               </div>
               <div class="border-right col-3 text-dark">
-                Time Taken: {{q.time}} mins
+                Time Taken: <div class="time">{{q.time}}</div>
               </div>
             </div>
           </div>
@@ -374,7 +362,7 @@
         <div class="card-body">
           <div class="row mb-3">
             <div class="col-6 border-right">
-              <p class="lead yr">Your Result</p>
+              <p style="color: black;" class="text-center lead yr">Your Result</p>
               <div class="row">
                 <div class="col text-dark">
                   Total Question: {{result.total_questions}}
@@ -400,7 +388,7 @@
                 <div class="col text-dark">
                   Unattempted Question: {{result.q_unanswered}}
                 </div>
-                <div class="col text-dark">Total time: {{result.time_taken}} mins</div>
+                <div class="col text-dark">Total time: <div class="time">{{result.time_taken}} </div></div>
               </div>
               <hr />
               <div class="row">
@@ -419,7 +407,7 @@
               <hr />
             </div>
             <div class="col-6">
-              <p class="lead tr">Topper's Result</p>
+              <p style="color: black;" class="text-center lead tr">Topper's Result</p>
               <div class="row">
                 <div class="col text-dark">
                   Total Question: {{topper.total_questions}}
@@ -445,7 +433,7 @@
                 <div class="col text-dark">
                   Unattempted Question: {{topper.q_unanswered}}
                 </div>
-                <div class="col text-dark">Total time: {{topper.time_taken}} mins</div>
+                <div class="col text-dark">Total time: <div class="time">{{topper.time_taken}} </div></div>
               </div>
               <hr />
               <div class="row">
@@ -591,6 +579,29 @@ var myBarChart = new Chart(ctx, {
         pdf.save('ScoreCard.pdf');
       })
     }
-</script>
 
+</script>
+<script>
+  $( document ).ready(function() {
+    var time_divs = $('.time');
+    for (let i = 0; i < time_divs.length; i++) {
+      d = Number(time_divs[i].innerText);
+      var h = Math.floor(d / 3600);
+      var m = Math.floor(d % 3600 / 60);
+      var s = Math.floor(d % 3600 % 60);
+  
+      var hDisplay = h > 0 ? h + (h == 1 ? " hour, " : " hours, ") : "";
+      var mDisplay = m > 0 ? m + (m == 1 ? " minute, " : " minutes, ") : "";
+      var sDisplay = s > 0 ? s + (s == 1 ? " second" : " seconds") : "";
+      
+      var final_time = hDisplay + mDisplay + sDisplay;
+      if (final_time=="")
+      {
+        final_time = "0 seconds"
+      }
+
+      time_divs[i].innerHTML = final_time; 
+    }
+});
+</script>
 {% endblock main-content %}
