--- a/templates/courses-2/archive-courses.html
+++ b/templates/courses-2/archive-courses.html
@@ -125,7 +125,7 @@ Institute Dashboard
                     <td>{{i.courseName}}</td>
                     <td class="text-center">
                       
-                      <a class="btn btn-dark" href="{% url 'course-unarchive' i.id %}"><i class="flaticon-delete-fill"
+                      <a class="btn btn-success" href="{% url 'course-unarchive' i.id %}"><i class="flaticon-delete-fill"
                           style="font-size:medium;"></i></a>
                     </td>
 
