--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -390,8 +390,7 @@ Explore
             </li>
 
             <li class="menu">
-              <a href="{% url 'centerexamresults' %}" data-toggle="collapse" aria-expanded="false"
-                class="dropdown-toggle collapsed">
+              <a href="{% url 'centerexamresults' %}">
                 <div class="">
                   <img src="{% static 'assets/img/results.png' %}" alt="">
                   <span>Results</span>
