--- a/templates/Results/Review_Answer.html
+++ b/templates/Results/Review_Answer.html
@@ -1,41 +1,47 @@
-{% extends 'tutor/dashboard.html' %}
+{% extends 'dashboard/base.html' %}
 {% load static %}
-{% block body %}
-<div class="card">
+{% block main-content %}
+<div class="card mt-5" style="color: black;">
   <div class="card-body">
-    <div class="float-right lead small">
-      Marks: {{answer.marks}},
+    <div class="float-right">
+      Marks: +{{answer.marks}},
 
-      <span> -{{answer.negative_marks}}</span>
+      <span> {% if answer.negative_marks %}-{% endif %}{{answer.negative_marks}}</span>
     </div>
     <h3>{{answer.question | safe}}</h3>
-    <p>Answer Given: {{answer.input_ans | safe}}</p>
+    <h6>Answer Given: {{answer.input_ans | safe}}</h6>
     {% if answer.input_ans_Image %}
-    <p><img src="/media/{{answer.input_ans_Image | safe}}" alt="answer image"></p>
+    <h6><img src="/media/{{answer.input_ans_Image | safe}}" alt="answer image"></h6>
     {% endif %}
-    <p>Correct Answer: {{answer.correct_ans | safe}}</p>
+    <h6>Correct Answer: <span class="edit"> {{answer.correct_ans | safe}}</span></h6>
     <hr />
-
-    <form method="POST">
+    <button class="btn btn-success" onclick="check(this)"> {% if answer.marks_given %} Recheck {% else %} Check {% endif %}</button>
+    <form style="display: none;" class="check-form" method="POST">
       {% csrf_token %}
-      <label
-        ><strong> Marks <span class="red">*</span> </strong></label
-      >
-      <br />
-      <p style="font-size: 15px;" class="lead text-info">
-        If Negative add minus(-)
-      </p>
+      <div class="input-group">
       <input
         required
         max="{{answer.marks}}"
+        min="-{{answer.negative_marks}}"
         class="form-control"
         name="marks"
         type="number"
         placeholder="Enter Marks"
         style="width: fit-content;"
       />
-      <button class="mt-2 btn btn-success">Enter</button>
+      <button class="input-group-append btn btn-success">Enter</button>
+    </div>
     </form>
   </div>
 </div>
+
+<script>
+  $(document).ready(function(){
+    $('.edit').html($('.edit').text())
+  })
+  function check(el){
+  $(el).parent().parent().find('.check-form').css('display','block')
+  $(el).css('display','none')
+}
+  </script>
 {% endblock %}
