--- a/templates/Results/StudentResult.html
+++ b/templates/Results/StudentResult.html
@@ -1,6 +1,6 @@
-{% extends 'tutor/dashboard.html' %}
+{% extends 'dashboard/base.html' %}
 {% load static %}
-{% block body%}
+{% block main-content %}
 
 <style>
   h6{
@@ -8,26 +8,26 @@
   }
 </style>
 
-<div class="mb-3 card">
-  <br /><br />
+<div class="mt-5 mb-3 card">
+  <div class="card-header">
   <h3 class="m-2 text-dark">
     <b>
-     <center><u>
-      {{name}} Results
-     </u>
+     <center>
+      {{mapping.student.user.first_name}} {{mapping.student.user.last_name}} Result
      </center>
     </b>
   </h3>
+</div>
 
   <div class="card-body">
     <div class="mb-3 text-right">
       {% if status %}
       <form method="POST" class="d-inline">
         {% csrf_token %}
-        <button class="btn btn-success btn-sm">Update Results</button>
+        <button class="btn btn-success">Update Results</button>
       </form>
       <a
-        class="btn btn-secondary btn-sm"
+        class="btn btn-secondary"
         href="{% url 'anotatePdfViewer' exam.id mapping.id %}"
         >View Report</a
       >
@@ -37,30 +37,53 @@
     <div class="table-responsive">
       <table class="mb-0 table align-middle table-striped table-hover">
         <tbody>
-          {% for question in student_results %}
+          {% for no,question in student_answers %}
           <tr>
             <td>
               <div>
                 <div class="float-right text-dark">
                   Marks: +{{question.marks}},
 
-                  <span>{{question.negative_marks}}</span>
+                  <span>{% if question.negative_marks %}-{% endif %}{{question.negative_marks}}</span>
                 </div>
-                <h5>{{question.question | safe}}</h5>
-                <div style="text-indent: 1em;">
+                <h5 class="mb-4">Ques {{no}}. <span class="edit">{{question.question | safe}}</span></h5>
+                <div>
                   <h6>Answer: {{question.input_ans | safe}}</h6>
-                  <h6>Correct Answer: {{question.correct_ans |safe}}</h6>
+                  <h6>Correct Answer: <span class="edit"> {{question.correct_ans |safe}}</span></h6>
                   <h6>Marks: {{question.marks_given}}</h6>
                   <h6>Time Taken: {{question.time}}</h6>
                   <h6>Extra Time Taken: {{question.extra_time}}</h6>
                 </div>
-
                 {% if question.qtype == 'short' or question.qtype == 'long' %}
-                <a
-                  href="{% url 'check_answer' question.id %}"
-                  class="btn btn-info btn-sm"
-                  >Check</a
-                >
+                
+                <form style="display: none; width: 210px;" class="check-form" method="POST" action="{% url 'check_answer' question.id %}">
+                  {% csrf_token %}
+                  <div class="input-group">
+                  <input
+                    required
+                    max="{{question.marks}}"
+                    min="-{{question.negative_marks}}"
+                    class="form-control"
+                    name="marks"
+                    type="number"
+                    placeholder="Enter Marks"
+                    style="width: fit-content;"
+                  />
+                  <button class="input-group-append btn btn-success">Enter</button>
+                </div>
+                </form>
+
+                <div>
+                  
+                  <button class="btn btn-success" onclick="check(this)"> {% if question.marks_given %} Recheck {% else %} Check {% endif %}</button>
+                  {% if question.input_ans_Image %}
+                  <a
+                    href="{% url 'check_answer' question.id %}"
+                    class="ml-1  btn btn-secondary"
+                    >View Image</a>
+                  {% endif %}  
+                </div>
+
                 {% endif %}
               </div>
             </td>
@@ -73,4 +96,18 @@
     </div>
   </div>
 </div>
+
+<script>
+$(document).ready(function(){
+  var edits = $('.edit')
+  for (let i = 0; i < edits.length; i++) {
+    edits[i].innerHTML = $(edits[i]).text()
+  }
+})
+
+function check(el){
+  $(el).parent().parent().find('.check-form').css('display','block')
+  $(el).css('display','none')
+}
+</script>
 {% endblock %}
