--- a/templates/students/addStudents.html
+++ b/templates/students/addStudents.html
@@ -384,7 +384,7 @@
         </div>
         <div class="col-sm-8 form-inline justify-content-end">
           <button class="btn btn-warning btn-md" role="button">Already Exists &raquo;</button>
-          <form method="POST" action="{% url 'searchUserStudent' %}">{% csrf_token %}
+          <form method="POST" class="my-0" action="{% url 'searchUserStudent' %}">{% csrf_token %}
             <input id="searchbox" type="text" class="form-control" name='srh' placeholder="Search Student" required>
             <button type="submit" class="btn btn-danger btn-md">Submit</button>
           </form>
