--- a/templates/dashboard/Tutor-dashboard.html
+++ b/templates/dashboard/Tutor-dashboard.html
@@ -233,7 +233,14 @@
               </a>
             </li>
 
-            
+            <li class="menu">
+              <a href="{% url 'centerexamresults' %}">
+                <div class="">
+                  <img src="{% static 'assets/img/results.png' %}" alt="">
+                  <span>Results</span>
+                </div>
+              </a>
+            </li>
           </ul>
         </nav>
       </div>
