--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -260,6 +260,15 @@ Explore
                 </div>
               </div>
             </li>
+            
+            <li class="menu">
+              <a href="{% url 'instCalendar' %}">
+                <div class="">
+                  <img src="{% static 'assets/img/card-outline.png' %}" alt="">
+                  <span>Calender modify</span>
+                </div>
+              </a>
+            </li>
 
            
 
