--- a/templates/teacher/searchUserTutor.html
+++ b/templates/teacher/searchUserTutor.html
@@ -49,7 +49,7 @@
             <div class="card mb-4">
                 <div class="card-header">
                     <div>
-                        <h2 style="color: rgb(0, 0, 0);">Results Are for searched Tutor</h2>
+                        <h2 style="color: rgb(0, 0, 0);">Results for searched Tutor</h2>
                     </div>
                 </div>
 
