--- a/templates/Exam/editExamQuestionsTutor.html
+++ b/templates/Exam/editExamQuestionsTutor.html
@@ -94,7 +94,7 @@
                             <tr>
                                 <td>{{forloop.counter}}</td>
                                 <td>{{i.Name}}</td>
-                                <td>{{i.course.courseName}}</td>
+                                <td>{{i.courseName}}</td>
                                 <td>{{i.price}}</td>
                                 <td>{{i.exam_date}}</td>
                                 <td>{{i.exam_duration}}</td>
