--- a/templates/Exam/studentExamsAll.html
+++ b/templates/Exam/studentExamsAll.html
@@ -14,8 +14,13 @@
                     </div>
                     </div>
                 </div>
+                {% if exams or tutorexams %}
                 {% if exams %}
                 <div class="widget-content widget-content-area">
+                    <div class="col-lg-12 col-sm-12 mb-3">
+                        <label class="form-check-label" for="defaultCheck1">
+                            Institute Exams
+                        </label></div>
                     <div class="table-responsive">
                         <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
                             <tr>
@@ -45,6 +50,48 @@
                         </table>
                     </div>
                 </div>
+                {% endif %}
+                
+                {% if tutorexams %}
+                <div class="widget-content widget-content-area">
+                    <div class="col-lg-12 col-sm-12 mb-3">
+                        <label class="form-check-label" for="defaultCheck1">
+                            Paid Exams
+                        </label></div>
+                    <div class="table-responsive">
+                        <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
+                            <tr>
+                                <th>#</th>
+                                <th>Exam Name</th>
+                                <th>Course</th>
+                                <th>Exam Date</th>
+                                <th>Duration</th>
+                                <th>Total Questions</th>
+                                <th>Price</th>
+                                <th class="text-center">Status</th>  
+                            </tr>
+                            
+                            {% for exam in tutorexams reversed %}
+                            <tr class="main-row">
+                                <td>{{forloop.counter}}</td>
+                                <td>{{exam.Name}}</td>
+                                <td>{{exam.courseName}}</td>
+                                <td>{{exam.exam_date}}</td>
+                                <td>{{exam.exam_duration}}</td>
+                                <td>{{exam.question_count}}</td>
+                                <td>{{exam.price}}</td>
+                                {% if exam.active %}
+                                <td class="text-center"><a class="btn btn-success">Submitted</a></td>
+                                {% else %}
+                                <td class="text-center"><a href="{% url 'tutor_instruction' exam.id %}" class="btn btn-info">Start Exam</a></td>
+                                {% endif %}                              
+                            </tr>
+                            {% endfor %}
+                        </table>
+                    </div>
+                </div>
+                {% endif %}
+
                 {% else %}
                 <div class="card-header" style="background: none;">
                     <div class="row">
