--- a/templates/Exam/viewExamsTutor.html
+++ b/templates/Exam/viewExamsTutor.html
@@ -22,6 +22,7 @@
                         </div>
                     </div>
                 </div>
+                {% if exams or tutotexams %}
                 {% if exams %}
                 <div class="widget-content widget-content-area">
                     <div class="table-responsive">
@@ -70,7 +71,8 @@
                         </table>
                         </form>
                         <br>
-                        {% elif tutorexams %}
+                        {% endif %}
+                        {% if tutorexams %}
                         <div class="col-lg-12 col-sm-12 mb-3">
                         <label class="form-check-label" for="defaultCheck1">
                             Exam For Sell
@@ -93,7 +95,7 @@
                             <tr>
                                 <td>{{forloop.counter}}</td>
                                 <td>{{i.Name}}</td>
-                                <td>{{i.course.courseName}}</td>
+                                <td>{{i.courseName}}</td>
                                 <td>{{i.price}}</td>
                                 <td>{{i.exam_date}}</td>
                                 <td>{{i.exam_duration}}</td>
@@ -114,6 +116,7 @@
                             {% endfor %}
                         </table>
                         </form>
+                        {% endif %}
                     </div>
                 </div>
                 {% else %}
