--- a/templates/Results/detailed_result.html
+++ b/templates/Results/detailed_result.html
@@ -187,7 +187,8 @@
       <!-- Time Managemnet -->
       <div id="timemanage" class="collapse" data-parent="#accordionExample">
         <div class="card-body">
-          <table class="table table-responsive table-striped">
+          <div class="table-responsive border-bottom mb-3">
+          <table class="table table-hover table-striped">
               <tr>
                 <th scope="col text-center">Section</th>
                 <th scope="col text-center">Total Question</th>
@@ -258,13 +259,14 @@
                 <td><div class="time">{{section.D_section_time}}</div></td>
               </tr>
           </table>
+        </div>
           <canvas id="timegraph"></canvas>
         </div>
       </div>
       <!-- Question Report -->
       <div id="questionreport" class="collapse" data-parent="#accordionExample">
         <div class="card-body">
-          <div class="table-responsive">
+          <div class="table-responsive table-striped table-hover">
             <table class="table ">
                 <tr>
                   <th scope="col">Q.No</th>
