--- a/templates/dashboard/Tutor-dashboard.html
+++ b/templates/dashboard/Tutor-dashboard.html
@@ -234,7 +234,7 @@
             </li>
 
             <li class="menu">
-              <a href="{% url 'centerexamresults' %}">
+              <a href="{% url 'tutorexamresults' %}">
                 <div class="">
                   <img src="{% static 'assets/img/results.png' %}" alt="">
                   <span>Results</span>
